refactor: 단일 결과 반환 로직 수정
- `results.get(0)`에서 `results.getFirst()`로 반환 방식 변경
- 코드 가독성 및 메서드의 의도 표현력 강화